--- a/manage/index.html
+++ b/manage/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 
 <head>
-    <title>con-date</title>
+    <title>homework</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -36,24 +36,8 @@
                     <p class="inquiry-text"></p>
                 </div>
                 <div class="field">
-                    <label class="label" for="userName">教科<span class="tag is-danger">必須</span></label>
-                        <div class="select">
-                                          <select name="example" id="userName" class="username">
-                                            <option value="現代文">現代文</option>
-                                            <option value="漢文">漢文</option>
-                                            <option value="古文">古文</option>
-                                            <option value="数学Ⅱ">数学Ⅱ</option>
-                                            <option value="数学B">数学B</option>
-                                            <option value="コミュ英">コミュ英</option>
-                                            <option value="英表">英表</option>
-                                            <option value="化学">化学</option>
-                                            <option value="生物">生物</option>
-                                            <option value="地理">地理</option>
-                                            <option value="現代社会">現代社会</option>
-                                            <option value="保健・体育">保健・体育</option>
-                                            <option value="その他">その他</option>
-                                          </select>
-                                          </div>
+                    <label class="label" for="userId">教科<span class="tag is-danger">必須</span></label>
+                        <input class="input"  id="userName" name="userName" />
                         </span>
                 </div>
                 <div class="field calendar-field">
@@ -222,6 +206,9 @@ btn.addEventListener('click', function () {
 
         .form-body #userId {
             width: 60%;
+        }
+        .form-body #userName {
+            width: 10%;
         }
 
         .form-body .submit-button {
