--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             if (ua.indexOf('iPhone') > 0
                     || (ua.indexOf('Android') < 0) && (ua.indexOf('Mobile') < 0)
                     || ua.indexOf('Windows Phone') < 0) {
-                    location.href = 'https://script.google.com/macros/s/AKfycbxyeLjsTpOmlmM_HOWumgDf2QWG-02IJc6f2wMJoEloRxzuxOlM0n6OvVIFQLqTUvYc9Q/exec';
+                    location.href = 'https://script.google.com/a/gse.okayama-c.ed.jp/macros/s/AKfycbyi4pEKj71s25Gw2DfX5yGI43tdSNGdumqX9PT-RR5RXF7KpNfXXGCy-CydQGdVhwR6Iw/exec';
                 }
         </script>
         <script type="text/javascript">
@@ -13,7 +13,7 @@
 	if (ua.indexOf('iPhone') > 0
 			|| (ua.indexOf('Android') > 0) && (ua.indexOf('Mobile') > 0)
 			|| ua.indexOf('Windows Phone') > 0) {
-			location.href = 'https://script.google.com/macros/s/AKfycbxyeLjsTpOmlmM_HOWumgDf2QWG-02IJc6f2wMJoEloRxzuxOlM0n6OvVIFQLqTUvYc9Q/exec';
+			location.href = 'https://script.google.com/a/gse.okayama-c.ed.jp/macros/s/AKfycbyi4pEKj71s25Gw2DfX5yGI43tdSNGdumqX9PT-RR5RXF7KpNfXXGCy-CydQGdVhwR6Iw/exec';
 		}
 	}
         </script>
